1) API implementation 2) Styling update 3) Favicon changed 4) App title updated 5) Type errors fixed 6) Projects list without edit and pagination

--- a/src/templates/Auth.html
+++ b/src/templates/Auth.html
@@ -3,6 +3,7 @@
         <div class="login-header">
             <h3>Login</h3>
         </div>
+        <Notification v-if="notifications.status" :msg="notifications.message" :type="notifications.type"></Notification>
         <div class="login-form">
             <label>
                 <span>E-Mail</span>
@@ -14,7 +15,7 @@
             </label>
         </div>
         <div class="login-footer">
-            <button :disabled="validateForm()" type="button" class="login" @click="login()">Login</button>
+            <button :disabled="this.validateForm()" type="button" class="login" @click="login()">Login</button>
         </div>
     </div>
 </transition>
