--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,7 +2,6 @@
 @import "style";
 
 .container {
-  background-color: $corp-blue;
   .header {
     color: white;
     display: flex;
@@ -23,6 +22,16 @@
       }
     }
     .login {
+      display: flex;
+      align-items: center;
+      span {
+        margin-right: 0.7rem;
+        display: flex;
+        align-items: center;
+        .span {
+          padding-top: 0.35rem;
+        }
+      }
       .header-button {
         @include button-outline(white, 40, 0.9);
       }
