1) Projects list without pagination 2) Edit project name 3) Refresh projects

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,7 +25,7 @@
       display: flex;
       align-items: center;
       span {
-        margin-right: 0.7rem;
+        margin: 0 0.7rem 0 0.7rem;
         display: flex;
         align-items: center;
         .span {
