Styling update for logout box part Updating logged status with single method

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -13,7 +13,7 @@
     .title {
       display: flex;
       align-items: center;
-      img {
+      .logo {
         max-height: 20px;
       }
       .title-desc {
@@ -21,28 +21,27 @@
         font-weight: 300;
       }
     }
-    .login {
+    .actions-box {
       display: flex;
       align-items: center;
-      span {
-        margin: 0 0.7rem 0 0.7rem;
-        display: flex;
-        align-items: center;
-        .span {
-          padding-top: 0.35rem;
+      .logout-box {
+        .name {
+          margin-right: 0.7rem;
         }
-      }
-      .header-button-logout {
         @include button-outline(white, 40, 0.9);
-        padding: 0.5rem 0rem 0.5rem 0rem;
-        span:nth-child(2) {
+        box-sizing: border-box;
+        cursor: unset;
+        .logout-button {
+          cursor: pointer;
           background-color: orange;
+          border: 0;
           color: white;
+          font-weight: 700;
           border-radius: 3px;
           padding: 0.3rem 0.7rem 0.3rem 0.7rem;
         }
       }
-      .header-button {
+      .update-button {
         @include button-outline(white, 40, 0.9);
       }
     }
